	Added an activate() slot which activates the action and
	executes all connected slots.
	Added showStatusMessage() and whatsThisClicked() signals.
	QActions::menuText() escapes ampersand characters ('&') when
	using the value of the text property.

- QButtonGroup
	Added QButtonGroup::selectedId property to allow mapping with
	SQL property sets.

- QCursor
	Added new enum value Qt::BusyCursor.

- QDom
	The QDom classes are now reentrant.

- QEvent
	Added new event type WindowStateChange, obsoleting ShowNormal,
	ShowMinimized, ShowMaximized and ShowFullScreen.

- QHeader
	The sizeChange() signal is emitted when the section sizes are
	adjusted by double clicking.

- QHostAddress
	Added new constructor for IPv6 and new functions
	isIPv6Address() and toIPv6Address(). Obsoleted the functions
	isIp4Addr() and ip4Addr(), replacing them with isIPv4Address()
	and toIPv4Address().

- QListView
	Improved alignment for text in QListViewItems. Right aligned
	text now has the ellipsis on the left.
	Keyboard search now uses the sort column as the column to
	start searching in.
	Improved branch drawing.

- QLocale [new]
	This new tool class converts between numbers and their string
	representations in various languages.

- QMacStyle
	Allow disabling of size constraints.

- QMovie
	Added JNG support.

- QPixmap
	Support full alpha-maps for paletted (8-bit) images.
	Support 16-bit grayscale PNG images with transparency.

- QPushButton
	A push button with both an iconset and text left-aligns the
	text.

- QSocketDevice
	Added setProtocol() and protocol() for IPv6 support.

- QSound
	Windows: Support loop related APIs.

- QSplashScreen
	Less intrusive stay-on-top policy.

- QSql
	Support for Interbase and SQLite.

- QStatusBar
	Draw messages with the foreground() color of the palette,
	rather than with the text() color.

- QString
	Added support for %lc and %ls to sprintf(). %lc takes a
	Unicode character of type ushort, %ls takes a zero-terminated